--- a/page1.html
+++ b/page1.html
@@ -12,7 +12,68 @@
 </head>
 
 <body>
+    <header>
+        <div
+            class="d-flex flex-column flex-md-row align-items-center p-3 mb-3 bg-white border-bottom box-shadow fixed-top">
+            <div class="row align-items-center">
+                <div class="col-sm-2 col-md-4">
+                    <img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
+                        class="rounded-circle img-thumbnail w-100" />
+                </div>
+                <div class="col-sm-10 col-md-8">
+                    <div class="page-header">
+                        <h1>
+                            Company name
+                        </h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main role="main">
+        <div class="container-fluid mt-5">
+            <div class="row">
+                <div class="col-md-12">
 
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h3>
+                        h3. Lorem ipsum dolor sit amet.
+                    </h3>
+                    <ul class="list-unstyled">
+                        <li><strong>Label:</strong><span>habitasse platea dictums</span>
+                        </li>
+                        <li><strong>Label:</strong><span>habitasse platea dictums</span></li>
+                        <li><strong>Label:</strong><span>habitasse platea dictums</span>
+                        </li>
+                    </ul>
+                    <p>
+                        Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien
+                        sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed
+                        vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis
+                        posuere
+                        diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo
+                            imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa
+                        magna,
+                        vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu,
+                            pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
+                    </p>
+                    <button type="button" class="btn btn-lg btn-block btn-primary">
+                        Mais Informaçãoes
+                    </button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <p>© 2017-2020 Intersystem. </p>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
