--- a/static/home.html
+++ b/static/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Page 1</title>
+    <title>Page Exemple</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -16,11 +16,11 @@
         <div
             class="d-flex flex-column flex-md-row align-items-center p-3 mb-3 bg-white border-bottom box-shadow fixed-top">
             <div class="row align-items-center">
-                <div class="col-sm-2 col-md-4">
+                <div class="col-4 col-sm-4 col-md-4">
                     <img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
                         class="rounded-circle img-thumbnail w-100" />
                 </div>
-                <div class="col-sm-10 col-md-8">
+                <div class="col-8 col-sm-8 col-md-8">
                     <div class="page-header">
                         <h1>
                             Company name
@@ -31,16 +31,23 @@
         </div>
     </header>
     <main role="main">
-        <div class="container-fluid mt-5">
-            <div class="row">
-                <div class="col-md-12">
-
-                </div>
-            </div>
+        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+            Dúvida enviada com sucesso!
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="alert alert-danger alert-dismissible fade collapse" role="alert">
+            Não foi possivel enviar sua dúvida, tente novamente mais tarde!
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
                     <h3>
-                        h3. Lorem ipsum dolor sit amet.
+                        Ficha
                     </h3>
                     <ul class="list-unstyled">
                         <li><strong>Label:</strong><span>habitasse platea dictums</span>
@@ -59,20 +66,55 @@
                         magna,
                         vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu,
                             pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
-                    </p>
-                    <button type="button" class="btn btn-lg btn-block btn-primary">
-                        Mais Informaçãoes
-                    </button>
+                    </p>                   
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
+                    <button type="button" class="btn btn-lg btn-block btn-primary" data-toggle="modal" data-target="#exampleModal">
+                        Mais Informaçãoes
+                    </button>
                 </div>
             </div>
         </div>
+
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Mais Informações</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                          <label for="exampleFormControlSelect1">Dúvidas:</label>
+                          <select class="form-control" id="exampleFormControlSelect1">
+                            <option>Selecione</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                          </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">Mensagem:</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                          </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-block btn-light mt-2" data-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn btn-block btn-primary">Enviar</button>
+                </div>
+              </div>
+            </div>
+          </div>
     </main>
-    <footer>
-        <p>© 2017-2020 Intersystem. </p>
+    <footer class="d-flex flex-column flex-md-row align-items-center pt-1 bg-white border-top box-shadow fixed-bottom">
+        <p class="text-center w-100">Copyright 2017-2020 © Intersystem.</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
