correções grid buttons e copyright

--- a/static/home.html
+++ b/static/home.html
@@ -114,7 +114,7 @@
           </div>
     </main>
     <footer class="d-flex flex-column flex-md-row align-items-center pt-1 bg-white border-top box-shadow fixed-bottom">
-        <p class="text-center w-100">Copyright 2017-2020 © Intersystem.</p>
+        <p class="text-center w-100">Copyright © <a href="http://intersystem.info/">Intersystem</a></p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
