alterando página nps

--- a/static/nps.html
+++ b/static/nps.html
@@ -70,6 +70,49 @@
                 <span class="text-center border-top mt-2 ml-1" style="font-size: 10px; width: 58px;">satisfeito</span>
             </div>
         </div>
+        <div class="mt-2">
+            <p class="text-center p-2">
+                Com base na sua experiência da reparação, qual a probabilidade de recomendar produtos desta marca aos seus familiares e amigos?
+            </p>
+           
+            <div class="d-flex flex-row justify-content-center nps">
+                <button type="button" class="btn btn-sm btn-success ml-1 mr-1" data-toggle="modal" data-target="#exampleModal">
+                    1
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#exampleModal">
+                    2
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#exampleModal">
+                    3
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#exampleModal">
+                    4
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#exampleModal">
+                    5
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#exampleModal">
+                    6
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#exampleModal">
+                    7
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#exampleModal">
+                    8
+                </button>   
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#exampleModal">
+                    9
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#exampleModal">
+                    10
+                </button>                   
+            </div> 
+            <div class="d-flex flex-row justify-content-center font">
+                <span class="text-center border-top mt-2 mr-1" style="font-size: 10px; width: 183px;">Não recomendo</span>
+                <span class="text-center border-top mt-2" style="font-size: 10px; width: 60px;">Não sei</span>
+                <span class="text-center border-top mt-2 ml-1" style="font-size: 10px; width: 65px;">Recomendo</span>
+            </div>
+        </div>
     </main>
     <footer class="d-flex flex-column flex-md-row align-items-center pt-1 bg-white border-top box-shadow fixed-bottom">
         <p class="text-center w-100">Copyright © <a href="http://intersystem.info/">Intersystem</a></p>
