correção de mensagem

--- a/static/nps.html
+++ b/static/nps.html
@@ -39,7 +39,7 @@
         </div>
         <div>
             <p class="text-center p-2">
-                Com base na sua experiência da reparação, qual a probabilidade de recomendar produtos desta marca aos seus familiares e amigos?
+                No geral, qual o nível de satisfação com o processo de reparação?
             </p>
             <div class="d-flex flex-row justify-content-center nps">
                 <button type="button" class="btn btn-sm btn-success ml-1 mr-1" data-toggle="modal" data-target="#exampleModal">
