refatorando paginas nps

--- a/static/nps-result.html
+++ b/static/nps-result.html
@@ -27,36 +27,8 @@
     <main role="main">
         <div>
             <p class="text-center p-2">
-                No geral, qual o nível de satisfação com o processo de reparação?
-            </p>
-            <div class="d-flex flex-row justify-content-center nps">
-                <button type="button" class="btn btn-sm btn-success ml-1 mr-1" data-toggle="modal" data-target="#exampleModal">
-                    1
-                </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#exampleModal">
-                    2
-                </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#exampleModal">
-                    3
-                </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#exampleModal">
-                    4
-                </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#exampleModal">
-                    5
-                </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#exampleModal">
-                    6
-                </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#exampleModal">
-                    7
-                </button>                   
-            </div>
-            <div class="d-flex flex-row justify-content-center font">
-                <span class="text-center border-top mt-2 mr-1" style="font-size: 10px; width: 88px;">Insatisfeito</span>
-                <span class="text-center border-top mt-2" style="font-size: 10px;">Não satisfeito</span>
-                <span class="text-center border-top mt-2 ml-1" style="font-size: 10px; width: 58px;">satisfeito</span>
-            </div>
+                Obrigado pela resposa!
+            </p>            
         </div>        
     </main>
     <footer class="d-flex flex-column flex-md-row align-items-center pt-1 bg-white border-top box-shadow fixed-bottom">
