--- a/static/nps-v2.html
+++ b/static/nps-v2.html
@@ -26,44 +26,41 @@
     </header>
     <main role="main">
         <div>
-            <form action="nps-result.html">
-                <p class="text-center p-2">
-                    Com base na sua experiência da reparação, qual a probabilidade de recomendar produtos desta marca aos seus familiares e amigos?
-                </p>
-            
-                <div class="d-flex flex-row justify-content-center nps">
-                    <button type="button" class="btn btn-sm btn-success ml-1 mr-1" data-toggle="modal" data-target="#1" data-value="1">
-                        1
-                    </button>
-                    <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#2" data-value="1">
-                        2
-                    </button>
-                    <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#3" data-value="2">
-                        3
-                    </button>
-                    <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#4" data-value="3">
-                        4
-                    </button>
-                    <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#5" data-value="4">
-                        5
-                    </button>
-                    <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#6" data-value="5">
-                        6
-                    </button>
-                    <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#7" data-value="6">
-                        7
-                    </button>
-                    <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#8" data-value="7">
-                        8
-                    </button>   
-                    <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#9" data-value="8">
-                        9
-                    </button>
-                    <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#10" data-value="10">
-                        10
-                    </button>                   
-                </div> 
-            </form>
+            <p class="text-center p-2">
+                Com base na sua experiência da reparação, qual a probabilidade de recomendar produtos desta marca aos seus familiares e amigos?
+            </p>
+            <div class="d-flex flex-row justify-content-center nps">
+                <button type="button" class="btn btn-sm btn-success ml-1 mr-1" data-toggle="modal" data-target="#1" data-value="1">
+                    1
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#2" data-value="1">
+                    2
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#3" data-value="2">
+                    3
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#4" data-value="3">
+                    4
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#5" data-value="4">
+                    5
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#6" data-value="5">
+                    6
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#7" data-value="6">
+                    7
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#8" data-value="7">
+                    8
+                </button>   
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#9" data-value="8">
+                    9
+                </button>
+                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#10" data-value="10">
+                    10
+                </button>                   
+            </div> 
             <div class="d-flex flex-row justify-content-center font">
                 <span class="text-center border-top mt-2 mr-1" style="font-size: 10px; width: 183px;">Não recomendo</span>
                 <span class="text-center border-top mt-2" style="font-size: 10px; width: 60px;">Não sei</span>
@@ -96,7 +93,8 @@
                 console.log(status);
                 console.log(data);
                 // resultado sucess
-                location.href = location.origin + "/" + "nps-result.html"
+                var urlResult = location.href.substring(0, location.href.lastIndexOf("/")) + "/" + "nps-result.html";
+                location.href = urlResult;
             });
         });
     </script>
