correção em cor e nova página

--- a/static/nps-v2.html
+++ b/static/nps-v2.html
@@ -30,34 +30,34 @@
                 Com base na sua experiência da reparação, qual a probabilidade de recomendar produtos desta marca aos seus familiares e amigos?
             </p>
             <div class="d-flex flex-row justify-content-center nps">
-                <button type="button" class="btn btn-sm btn-success ml-1 mr-1" data-toggle="modal" data-target="#1" data-value="1">
+                <button type="button" class="btn btn-sm btn-primary ml-1 mr-1" data-toggle="modal" data-target="#1" data-value="1">
                     1
                 </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#2" data-value="1">
+                <button type="button" class="btn btn-sm btn-primary mr-1" data-toggle="modal" data-target="#2" data-value="1">
                     2
                 </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#3" data-value="2">
+                <button type="button" class="btn btn-sm btn-primary mr-1" data-toggle="modal" data-target="#3" data-value="2">
                     3
                 </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#4" data-value="3">
+                <button type="button" class="btn btn-sm btn-primary mr-1" data-toggle="modal" data-target="#4" data-value="3">
                     4
                 </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#5" data-value="4">
+                <button type="button" class="btn btn-sm btn-primary mr-1" data-toggle="modal" data-target="#5" data-value="4">
                     5
                 </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#6" data-value="5">
+                <button type="button" class="btn btn-sm btn-primary mr-1" data-toggle="modal" data-target="#6" data-value="5">
                     6
                 </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#7" data-value="6">
+                <button type="button" class="btn btn-sm btn-primary mr-1" data-toggle="modal" data-target="#7" data-value="6">
                     7
                 </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#8" data-value="7">
+                <button type="button" class="btn btn-sm btn-primary mr-1" data-toggle="modal" data-target="#8" data-value="7">
                     8
                 </button>   
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#9" data-value="8">
+                <button type="button" class="btn btn-sm btn-primary mr-1" data-toggle="modal" data-target="#9" data-value="8">
                     9
                 </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#10" data-value="10">
+                <button type="button" class="btn btn-sm btn-primary mr-1" data-toggle="modal" data-target="#10" data-value="10">
                     10
                 </button>                   
             </div> 
