--- a/static/nps.html
+++ b/static/nps.html
@@ -30,25 +30,25 @@
                 No geral, qual o nível de satisfação com o processo de reparação?
             </p>
             <div class="d-flex flex-row justify-content-center nps">
-                <button type="button" class="btn btn-sm btn-success ml-1 mr-1" data-toggle="modal" data-target="#1" data-value="1">
+                <button type="button" class="btn btn-sm btn-primary ml-1 mr-1" data-toggle="modal" data-target="#1" data-value="1">
                     1
                 </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#2" data-value="2">
+                <button type="button" class="btn btn-sm btn-primary mr-1" data-toggle="modal" data-target="#2" data-value="2">
                     2
                 </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#3" data-value="3">
+                <button type="button" class="btn btn-sm btn-primary mr-1" data-toggle="modal" data-target="#3" data-value="3">
                     3
                 </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#4" data-value="4">
+                <button type="button" class="btn btn-sm btn-primary mr-1" data-toggle="modal" data-target="#4" data-value="4">
                     4
                 </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#5" data-value="5">
+                <button type="button" class="btn btn-sm btn-primary mr-1" data-toggle="modal" data-target="#5" data-value="5">
                     5
                 </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#6" data-value="6">
+                <button type="button" class="btn btn-sm btn-primary mr-1" data-toggle="modal" data-target="#6" data-value="6">
                     6
                 </button>
-                <button type="button" class="btn btn-sm btn-success mr-1" data-toggle="modal" data-target="#7" data-value="7">
+                <button type="button" class="btn btn-sm btn-primary mr-1" data-toggle="modal" data-target="#7" data-value="7">
                     7
                 </button>                   
             </div>
