correção no número de botões

--- a/static/nps-radio.html
+++ b/static/nps-radio.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="d-flex flex-row justify-content-center">
                     <input class="m-2" type="radio" name="nota-1" id="nota-1-vl-1" value="1">                  
-                    <input class="m-2" type="radio" name="nota-1" id="nota-1-vl-1" value="2">
+                    <input class="m-2" type="radio" name="nota-1" id="nota-1-vl-2" value="2">
                     <input class="m-2" type="radio" name="nota-1" id="nota-1-vl-3" value="3">
                     <input class="m-2" type="radio" name="nota-1" id="nota-1-vl-4" value="4">
                     <input class="m-2" type="radio" name="nota-1" id="nota-1-vl-5" value="5">
@@ -61,6 +61,7 @@
                     Com base na sua experiência da reparação, qual a probabilidade de recomendar produtos desta marca aos seus familiares e amigos?
                 </p>
                 <div class="d-flex flex-row justify-content-center nps-label">
+                    <label class="form-check-label m-2" for="nota-2-vl-0">0</label>
                     <label class="form-check-label m-2" for="nota-2-vl-1">1</label>
                     <label class="form-check-label m-2" for="nota-2-vl-2">2</label>
                     <label class="form-check-label m-2" for="nota-2-vl-3">3</label>
@@ -73,6 +74,7 @@
                     <label class="form-check-label m-2" for="nota-2-vl-10">10</label>
                 </div>
                 <div class="d-flex flex-row justify-content-center">
+                    <input class="m-2" type="radio" name="nota-2" id="nota-2-vl-0" value="0">
                     <input class="m-2" type="radio" name="nota-2" id="nota-2-vl-1" value="1">                  
                     <input class="m-2" type="radio" name="nota-2" id="nota-2-vl-2" value="2">
                     <input class="m-2" type="radio" name="nota-2" id="nota-2-vl-3" value="3">
@@ -85,13 +87,13 @@
                     <input class="m-2" type="radio" name="nota-2" id="nota-2-vl-10" value="10">
                 </div> 
                 <div class="d-flex flex-row justify-content-center font">
-                    <span class="text-center border-top mt-2 mr-1" style="font-size: 10px; width: 183px;">Não recomendo</span>
-                    <span class="text-center border-top mt-2" style="font-size: 10px; width: 60px;">Não sei</span>
-                    <span class="text-center border-top mt-2 ml-1" style="font-size: 10px; width: 65px;">Recomendo</span>
+                    <span class="text-center border-top mt-2 mr-1" style="font-size: 10px; width: 200px;">Não recomendo</span>
+                    <span class="text-center border-top mt-2" style="font-size: 10px; width: 55px;">Não sei</span>
+                    <span class="text-center border-top mt-2 ml-1" style="font-size: 10px; width: 55px;">Recomendo</span>
                 </div>
             </div>
             <div class="p-3 pt-4">
-                <button type="submit" class="btn btn-lg btn-block btn-primary" data-toggle="modal" data-target="#exampleModal">
+                <button type="submit" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#exampleModal">
                     Enviar
                 </button>
             </div>    
