--- a/static/nps-v2.html
+++ b/static/nps-v2.html
@@ -30,6 +30,9 @@
                 Com base na sua experiência da reparação, qual a probabilidade de recomendar produtos desta marca aos seus familiares e amigos?
             </p>
             <div class="d-flex flex-row justify-content-center nps">
+                <button type="button" class="btn btn-sm btn-primary ml-1 mr-1" data-toggle="modal" data-target="#1" data-value="0">
+                    0
+                </button>
                 <button type="button" class="btn btn-sm btn-primary ml-1 mr-1" data-toggle="modal" data-target="#1" data-value="1">
                     1
                 </button>
@@ -62,7 +65,7 @@
                 </button>                   
             </div> 
             <div class="d-flex flex-row justify-content-center font">
-                <span class="text-center border-top mt-2 mr-1" style="font-size: 10px; width: 183px;">Não recomendo</span>
+                <span class="text-center border-top mt-2 mr-1" style="font-size: 10px; width: 217px;">Não recomendo</span>
                 <span class="text-center border-top mt-2" style="font-size: 10px; width: 60px;">Não sei</span>
                 <span class="text-center border-top mt-2 ml-1" style="font-size: 10px; width: 65px;">Recomendo</span>
             </div>
