arrumando botão enviar

--- a/static/nps-radio.html
+++ b/static/nps-radio.html
@@ -92,8 +92,8 @@
                     <span class="text-center border-top mt-2 ml-1" style="font-size: 10px; width: 55px;">Recomendo</span>
                 </div>
             </div>
-            <div class="p-3 pt-4">
-                <button type="submit" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#exampleModal">
+            <div class="p-3 pt-4 text-center">
+                <button type="submit" class="btn btn-lg btn-primary pl-5 pr-5" data-toggle="modal" data-target="#exampleModal">
                     Enviar
                 </button>
             </div>    
